@@ -5,7 +5,8 @@
 	Correct extra checks.
 	(epackage-lint-extra-buffer-run-lm): Adjust pure numric message
 	to warning.
-	(epackage-lint-extra-checkdoc-advice): New.
+	(epackage-lint-extra-checkdoc-advice): Remove.
+	(epackage-lint-extra-buffer-checkdoc-cleanup): New.
 
 2012-01-03 Tue  Jari Aalto  <jari.aalto@cante.net>
 
